test/compile-errors/builtin-does-not-exist.crow
main void()
	()

x builtin

x spec builtin

# There are '==' builtins but not with this signature
== string(a nat, b int) builtin
